solution for AoC 2023 Day 10: 'Pipe Maze' - part 2